--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "0.4.33", features = ["serde"] }
 clap = { version = "4.4.18", features = ["derive"] }
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 enum-iterator = "1.5.0"
+fuzzy-muff = "0.3.10"
 glob = "0.3.1"
 rayon = "1.8.1"
 regex = "1.10.3"
