--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
 
 [dependencies]
 chrono = { version = "0.4.33", features = ["serde"] }
-clap = { version = "4.4.18", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive", "env"] }
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 enum-iterator = "1.5.0"
 fuzzy-muff = "0.3.10"
